--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,11 +19,27 @@
 <!--       <p class="title">{{ site.author.title }}</p> -->
 
       <nav>
-        <ul>
+<!--         <ul>
           <li><a href="{{ '/about' | relative_url }}">About</a></li>
           <li><a href="{{ '/projects' | relative_url }}">Projects</a></li>
           <li><a href="{{ '/contact' | relative_url }}">Contact</a></li>
         </ul>
+
+        <ul> -->
+<!--           <li class="{% if page.url == '/' %}active{% endif %}">
+            <a href="/">Home</a>
+          </li> -->
+          <li class="{% if page.url contains '/about' %}active{% endif %}">
+            <a href="{{ '/about' | relative_url }}">About</a>
+          </li>
+          <li class="{% if page.url contains '/projects' %}active{% endif %}">
+            <a href="{{ '/projects' | relative_url }}">Projects</a>
+          </li>
+          <li class="{% if page.url contains '/contact' %}active{% endif %}">
+            <a href="{{ '/contact' | relative_url }}">Contact</a>
+          </li>
+        </ul>
+
       </nav>
     </aside>
 
