--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,22 +23,28 @@
         </ul> -->
 
         <ul>
-          <li class="{% if page.url contains '/about' %}active{% endif %}">
-            <a href="{{ '/about' | relative_url }}">About Me</a>
-          </li>
-          <li class="has-submenu {% if page.url contains '/projects' %}active{% endif %}">
+          <li class="has-submenu {% if page.url contains '/projects' %}submenu-open{% endif %}">
             <a href="{{ '/projects' | relative_url }}">My Projects</a>
             <ul class="submenu">
-              <li><a href="{{ '/projects/my-shoppa' | relative_url }}">MyShoppa</a></li>
-              <li><a href="{{ '/projects/link-saver' | relative_url }}">LinkSaver</a></li>
-              <li><a href="{{ '/projects/choristera' | relative_url }}">Choristera</a></li>
-              <li><a href="{{ '/projects/remind-me' | relative_url }}">RemindMe</a></li>
-              <li><a href="{{ '/projects/eveoma' | relative_url }}">Eveoma</a></li>
-              <li><a href="{{ '/projects/trackulator' | relative_url }}">Trackulator</a></li>
+              <li class="{% if page.url == '/projects/my-shoppa/' %}active{% endif %}">
+                <a href="{{ '/projects/my-shoppa' | relative_url }}">MyShoppa</a>
+              </li>
+              <li class="{% if page.url == '/projects/link-saver/' %}active{% endif %}">
+                <a href="{{ '/projects/link-saver' | relative_url }}">LinkSaver</a>
+              </li>
+              <li class="{% if page.url == '/projects/choristera/' %}active{% endif %}">
+                <a href="{{ '/projects/choristera' | relative_url }}">Choristera</a>
+              </li>
+              <li class="{% if page.url == '/projects/remind-me/' %}active{% endif %}">
+                <a href="{{ '/projects/remind-me' | relative_url }}">RemindMe</a>
+              </li>
+              <li class="{% if page.url == '/projects/eveoma/' %}active{% endif %}">
+                <a href="{{ '/projects/eveoma' | relative_url }}">Eveoma</a>
+              </li>
+              <li class="{% if page.url == '/projects/trackulator/' %}active{% endif %}">
+                <a href="{{ '/projects/trackulator' | relative_url }}">Trackulator</a>
+              </li>
             </ul>
-          </li>
-          <li class="{% if page.url contains '/contact' %}active{% endif %}">
-            <a href="{{ '/contact' | relative_url }}">Contact Me</a>
           </li>
         </ul>
 
@@ -81,7 +87,7 @@
       document.querySelectorAll(".has-submenu > a").forEach(function(link) {
         link.addEventListener("click", function(e) {
           e.preventDefault();
-          this.parentElement.classList.toggle("active");
+          this.parentElement.classList.toggle("submenu-open");
         });
       });
     });
